--- a/less/footer.less
+++ b/less/footer.less
@@ -2,27 +2,33 @@ footer {
   .flex-box(row wrap, center, center);
   .width-height(100%, auto);
   .footer-text();
-  .margin-padding(0, 5% 2% 0.5%);
+  .margin-padding(0, 5% 10% 0.5%);
 
   @media @mobile {
     .flex-box(column wrap, center, flex-start);
     .margin-padding(0, 5%);
   }
   background: @armygreen;
-  address {
-    .width-height(25%, auto);
-    .flex-box(column wrap, space-between, flex-start);
-    h2 {
-      .footer-headings();
-    }
-    @media @mobile {
-      .margin-padding(0 0 5%, 1%);
-      .width-height(100%, auto);
+  .address {
+    .flex-box(row wrap, flex-start, center);
+    .width-height(75%, auto);
+    address {
+      .width-height(30%, auto);
+      .flex-box(column wrap, space-between, flex-start);
+      h2 {
+        .footer-headings();
+      }
+      @media @mobile {
+        .margin-padding(0 0 5%, 1%);
+        .width-height(100%, auto);
+      }
     }
   }
   .left {
+    position: relative;
     .width-height(25%, auto);
-    .flex-box(column wrap, center, center);
+    .flex-box(column wrap, center, flex-start);
+    .margin-padding(0, 0);
     @media @mobile {
       .margin-padding(0 0 5%, 1%);
       .width-height(100%, auto);
@@ -43,13 +49,13 @@ footer {
       .width-height(100%, auto);
       text-align: left;
       .footer-headings();
-      .margin-padding(0, 0 12.5%);
+      .margin-padding(0, 0);
       @media @mobile {
         .margin-padding(0, 0);
       }
     }
     .second {
-      .margin-padding(1% 0 5%, 0 12.5%);
+      .margin-padding(1% 0 5%, 0);
       text-align: left;
       @media @mobile {
         .margin-padding(0 0 2%, 0);
@@ -58,7 +64,7 @@ footer {
     h4 {
       font-size: 1rem;
       .width-height(100%, auto);
-      .margin-padding(0, 0 12.5%);
+      .margin-padding(0, 0);
       @media @mobile {
         .margin-padding(0, 0);
         font-size: 1.8rem;
