--- a/less/homepage.less
+++ b/less/homepage.less
@@ -57,7 +57,7 @@
         text-decoration: none;
       }
       &:hover {
-        background: @black;
+        background: #5e9fb9;
         a {
           color: @white;
         }
