--- a/less/navigation.less
+++ b/less/navigation.less
@@ -16,19 +16,18 @@
   }
   nav {
     .flex-box(column wrap, flex-end, center);
-    width: 25%;
-    @media @mobile {
-      width: 40%;
-    }
     align-self: center;
+    width: 20%;
+    @media @mobile {
+      width: 33%;
+    }
+    
     display: none;
 
     a {
       .nav-text();
-      position: relative;
       text-decoration: none;
-      text-align: right;
-      left: 25%;
+
       @media @mobile {
         left: 0%;
       }
